--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,14 @@ main{
     justify-content: space-between;
     margin: 0;
     width: 100%;
-    background-color: aliceblue;
+    background-color: rgba(240, 248, 255, 0.349);
     display: flex;
     flex-direction: row;
+    transition: ease-in-out 250ms;
+}
+
+.contacts:hover{
+    background-color: rgba(240, 248, 255, 0.582);
 }
 
 .contact-icons{
@@ -97,7 +102,7 @@ main{
 }
 
 .contact-info p{
-    color: #7e7e7e;
+    color: #222222;
 }
 
 .contact-icons{
